# incident-ops-openenv

./: .gitignore  Blog.MD  Dockerfile  README.md  app.py  colab_notebook_guide.py  colab_training.ipynb  compare_inference.py  hf_deploy.py  inference.py  openenv.yaml  preflight_quick.py  preflight_test.py  pyproject.toml  requirements-train.txt  requirements.txt  reward_log.csv  test_inference.py  train.py
.github/workflows/: ci.yml
config/: train.yaml
env/: environment.py  models.py
graders/: grader.py
scripts/: evaluate.py
server/: app.py
static/: index.html
tasks/: task_config.py
tests/: conftest.py  test_environment.py  test_grader.py  test_reward_functions.py
training/: __init__.py  callbacks.py  config.py  dataset.py  pipeline.py  plot.py  reward_functions.py
